--- a/index.html
+++ b/index.html
@@ -1,126 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Multi-step form</title>
+		<link
+			rel="icon"
+			type="image/png"
+			sizes="32x32"
+			href="./assets/images/favicon-32x32.png"
+		/>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
-</head>
-<body>
+		<link rel="stylesheet" href="css/style.css" />
+		<link rel="stylesheet" href="css/queries.css" />
 
-  <!-- Sidebar start -->
+		<title>Frontend Mentor | Multi-step form</title>
+	</head>
+	<body>
+		<main>
+			<div class="container">
+				<section class="section-step">
+					<div class="step">
+						<button class="step-btn step-1">1</button>
 
-  Step 1
-  Your info
+						<div class="step-content">
+							<p class="step-level">step 1</p>
+							<h2 class="step-title">your info</h2>
+						</div>
+					</div>
+					<div class="step">
+						<button class="step-btn step-2">2</button>
 
-  Step 2
-  Select plan
+						<div class="step-content">
+							<p class="step-level">step 2</p>
+							<h2 class="step-title">select plan</h2>
+						</div>
+					</div>
+					<div class="step">
+						<button class="step-btn step-3">3</button>
 
-  Step 3
-  Add-ons
+						<div class="step-content">
+							<p class="step-level">step 3</p>
+							<h2 class="step-title">add-ons</h2>
+						</div>
+					</div>
+					<div class="step">
+						<button class="step-btn step-4">4</button>
 
-  Step 4
-  Summary
+						<div class="step-content">
+							<p class="step-level">step 4</p>
+							<h2 class="step-title">summary</h2>
+						</div>
+					</div>
+				</section>
+				<!-- Step 1 -->
+				<section class="section-personal hide">
+					<h1 class="heading-primary">Personal info</h1>
+					<p class="heading-secondary">
+						Please provide your name, email address, and phone number
+					</p>
 
-  <!-- Sidebar end -->
-
-  <!-- Step 1 start -->
-
-  Personal info
-  Please provide your name, email address, and phone number.
-
-  Name
-  e.g. Stephen King
-
-  Email Address
-  e.g. stephenking@lorem.com
-
-  Phone Number
-  e.g. +1 234 567 890
-
-  Next Step
-
-  <!-- Step 1 end -->
-
-  <!-- Step 2 start -->
-
-  Select your plan
-  You have the option of monthly or yearly billing.
-
-  Arcade
-  $9/mo
-
-  Advanced
-  $12/mo
-
-  Pro
-  $15/mo
-
-  Monthly
-  Yearly
-
-  Go Back
-  Next Step
-
-  <!-- Step 2 end -->
-
-  <!-- Step 3 start -->
-
-  Pick add-ons
-  Add-ons help enhance your gaming experience.
-
-  Online service
-  Access to multiplayer games
-  +$1/mo
-
-  Larger storage
-  Extra 1TB of cloud save
-  +$2/mo
-
-  Customizable Profile
-  Custom theme on your profile
-  +$2/mo
-
-  Go Back
-  Next Step
-
-  <!-- Step 3 end -->
-
-  <!-- Step 4 start -->
-
-  Finishing up
-  Double-check everything looks OK before confirming.
-
-  <!-- Dynamically add subscription and add-on selections here -->
-
-  Total (per month/year)
-
-  Go Back
-  Confirm
-
-  <!-- Step 4 end -->
-
-  <!-- Step 5 start -->
-
-  Thank you!
-
-  Thanks for confirming your subscription! We hope you have fun 
-  using our platform. If you ever need support, please feel free 
-  to email us at support@loremgaming.com.
-
-  <!-- Step 5 end -->
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
-</body>
+					<form class="form">
+						<div class="form-box">
+							<label for="full-name">name</label>
+							<input
+								type="text"
+								id="full-name"
+								placeholder="e.g. Stephen King"
+							/>
+						</div>
+						<div class="form-box">
+							<label for="email">email address</label>
+							<input
+								type="email"
+								id="email"
+								placeholder="e.g. stephenking@lorem.com"
+							/>
+						</div>
+						<div class="form-box">
+							<label for="telphone">phone number</label>
+							<input
+								type="tel"
+								id="telphone"
+								placeholder="e.g. +1 2334 567 890"
+							/>
+						</div>
+					</form>
+				</section>
+				<!-- Step 2 -->
+				<section class="section-plan hide">
+					<h1 class="heading-primary">Select your plan</h1>
+					<p class="heading-secondary">
+						You have option of monthly or yearly billing
+					</p>
+					<div class="plans">
+						<div class="plan">
+							<div class="plan-img">
+								<img
+									src="assets/images/icon-arcade.svg"
+									alt="arcade-logo"
+								/>
+							</div>
+							<div class="plan-content">
+								<h3 class="plan-type">Arcade</h3>
+								<p class="plan-price">$9/mo</p>
+							</div>
+						</div>
+						<div class="plan">
+							<div class="plan-img">
+								<img
+									src="assets/images/icon-advanced.svg"
+									alt="advanced-logo"
+								/>
+							</div>
+							<div class="plan-content">
+								<h3 class="plan-type">Advanced</h3>
+								<p class="plan-price">$12/mo</p>
+							</div>
+						</div>
+						<div class="plan">
+							<div class="plan-img">
+								<img
+									src="assets/images/icon-pro.svg"
+									alt="arcade-logo"
+								/>
+							</div>
+							<div class="plan-content">
+								<h3 class="plan-type">Pro</h3>
+								<p class="plan-price">$15/mo</p>
+							</div>
+						</div>
+					</div>
+					<div class="plan-durations">
+						<p class="plan-duration">Monthly</p>
+						<label class="switch">
+							<input type="checkbox" />
+							<span class="slider round"></span>
+						</label>
+						<p class="plan-duration">Yearly</p>
+					</div>
+				</section>
+				<!-- Step 3 -->
+				<section class="section-add-on hide">
+					<h1 class="heading-primary">Pick add-ons</h1>
+					<p class="heading-secondary">
+						Add-ons help enhance your gaming experience
+					</p>
+					<div class="add-ons">
+						<div class="add-on">
+							<input type="checkbox" />
+							<div class="add-on--content">
+								<h3 class="add-on--title">Online service</h3>
+								<p class="add-on--paragraph">
+									Access to multiplayer games
+								</p>
+							</div>
+							<p class="add-on--price">+$1/mo</p>
+						</div>
+						<div class="add-on">
+							<input type="checkbox" />
+							<div class="add-on--content">
+								<h3 class="add-on--title">Larger storage</h3>
+								<p class="add-on--paragraph">Extra 1TB of cloud save</p>
+							</div>
+							<p class="add-on--price">+$2/mo</p>
+						</div>
+						<div class="add-on">
+							<input type="checkbox" />
+							<div class="add-on--content">
+								<h3 class="add-on--title">Customizable profile</h3>
+								<p class="add-on--paragraph">
+									Custom theme on your theme
+								</p>
+							</div>
+							<p class="add-on--price">+$2/mo</p>
+						</div>
+					</div>
+				</section>
+				<!-- Step 4 -->
+				<section class="section-finishing">
+					<h1 class="heading-primary">Finishing up</h1>
+					<p class="heading-secondary">
+						Double-check everything looks OK before confirming
+					</p>
+					<div class="finish">
+						<div class="finish-plan">
+							<div>
+								<h3 class="finish-plan--title">Arcade(Monthly)</h3>
+								<a href="#">change</a>
+							</div>
+							<p class="finish-plan--amount">$9/mo</p>
+						</div>
+						<div class="finish-add-ons">
+							<div>
+								<p class="add-on--title">Online service</p>
+								<p class="add-on--price">+$1/mo</p>
+							</div>
+							<div>
+								<p class="add-on--title">Larger storage</p>
+								<p class="add-on--price">+$2/mo</p>
+							</div>
+						</div>
+					</div>
+					<div class="total">
+						<p>Total (per month)</p>
+						<p>+$12/mo</p>
+					</div>
+				</section>
+			</div>
+		</main>
+		<script src="index.js"></script>
+	</body>
 </html>
